[project]
name = "riskitem"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2,<3",
  "PyYAML>=6,<7",
  "fastapi>=0.110,<1",
  "uvicorn[standard]>=0.30,<1",
  "celery[redis]>=5.4,<6",
  "sqlalchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29,<1",
  "psycopg[binary]>=3.2,<4",
  "alembic>=1.14,<2",
  "python-dotenv>=1.0,<2",
  "pydantic-settings>=2.0,<3",
  "pyarrow>=14,<20",
  "minio>=7.2,<8",
  "httpx>=0.28,<1",
  "structlog>=24.0,<25",
  "scikit-learn>=1.5,<2",
  "mlflow>=2.16,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.24,<1",
  "httpx>=0.28,<1",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["packages*", "apps*", "workers*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
